# bootcamp-backend

./: .repl_history  Cargo.toml  Config.toml  build.sh
air-scripts/: init_service.air
aqua/: academy_backend.aqua
artifacts/: academy_backend.wasm
configs/: deploy-service.json  deploy.json
src/: db.rs  main.rs
